<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_baseline_local_dining_24"
            android:title="@string/Feed" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_alarm_24"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_pets"
            android:icon="@drawable/ic_baseline_pets_24"
            android:title="@string/pets" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_baseline_post_add_24"
            android:title="@string/add" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="@string/activities" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_baseline_sticky_note_2_24"
            android:title="@string/diary" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/options">
            <menu>
                <item
                    android:id="@+id/nav_tips"
                    android:icon="@drawable/ic_baseline_lightbulb_24"
                    android:title="@string/tips" />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/exit" />
            </menu>
        </item>
    </group>
</menu>